# MB_TOg_Programming_Language

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
.circleci/: config.yml
data/: LRParserTable.json  LR_table.json  input5.json  table.json  test.json
data/input/: Conditionele Logica.txt  Eenvoudige Rekenkunde en Variabelen.txt  Functies en Parameters.txt  Invoer:Uitvoer.txt  Lussen en Iteratie.txt  Rekenmachine.txt  Werken met Verschillende Gegevenstypen.txt
src/: CMakeLists.txt  Executor.cpp  Executor.h  Lexer.h  MyLang.cpp  MyLang.h  Parser.cpp  Parser.h  cfg.json  main.cpp
src/datatypes/: AST.cpp  AST.h  CFG.cpp  CFG.h  CNF.cpp  CNF.h  ParsingTable.cpp  ParsingTable.h  Token.cpp  Token.h  prodRules.cpp  prodRules.h
src/exceptions/: ArgsError.h  FileNotFoundError.h
src/modules/: ASTGenerator.cpp  ASTGenerator.h  Executor.cpp  Executor.h  LRParser.cpp  LRParser.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h
src/modules/executionEnvironment/: Environment.cpp  Environment.h
src/utilities/: ParserTableLoader.cpp  ParserTableLoader.h
tst/: CMakeLists.txt  EnvTests.cpp  EnvironmentTests.cpp  ExecutorTests.cpp  Lexer-test.cpp  ParserTableLoaderTest.cpp  ParserTests.cpp
tst/ExecutorTests/: AssignmentTests.cpp  BinaryExpressionTests.cpp  FunctionCallTests.cpp  FunctionDeclarationTests.cpp  IfStatementTests.cpp  InputTests.cpp  PrintTests.cpp  ReturnStatementTest.cpp  WhileStatementTests.cpp
tst/ParserTableLoaderJSON/: basicTable.json
